--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -53,7 +53,7 @@ a:focus {
   z-index: 99999;
 }
 #main-slider {
-  background-image: url(../images/slider-bg.jpg);
+  background-image: url(main-image.jpg);
   background-attachment: fixed;
   background-size: cover;
   background-position: 50% 50%;
@@ -636,4 +636,38 @@ textarea#message {
     opacity: 1;
     -o-transform: scale(1);
   }
+}
+
+
+
+
+
+
+
+
+// Added from skilltra.de
+.content-section-a {
+  padding: 50px 0;
+
+}
+
+.content-section-b {
+  padding: 50px 0;
+  border-top: 1px solid #e7e7e7;
+  border-bottom: 1px solid #e7e7e7;
+}
+
+.section-heading {
+  margin-bottom: 30px;
+}
+
+.section-heading-spacer {
+  float: left;
+  width: 200px;
+  border-top: 3px solid #e7e7e7;
+}
+
+.lead {
+  font-size: 18px;
+  font-weight: 400;
 }
