--- a/app/views/pages/main.html.erb
+++ b/app/views/pages/main.html.erb
@@ -32,7 +32,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="index.html"></a>
+          <a class="navbar-brand" href="#">Book Club</a>
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
@@ -40,7 +40,7 @@
             <li><a href="#services">Services</a></li>
             <li><a href="#portfolio">Portfolio</a></li>
             <li><a href="#pricing">Pricing</a></li>
-            <li><a href="#about-us">About Us</a></li>
+            <!-- <li><a href="#about-us">About Us</a></li> -->
             <li><a href="#contact">Contact</a></li>
           </ul>
         </div>
@@ -53,22 +53,12 @@
       <div class="item active">
         <div class="container">
           <div class="carousel-content">
-            <h1>Free Onepage Theme</h1>
+            <h1>5 Star Books Delivered to Your Door</h1>
             <p class="lead">Xeon is the best free onepage responsive theme available arround the globe<br>Download it right now for free</p>
           </div>
         </div>
       </div><!--/.item-->
-      <div class="item">
-        <div class="container">
-          <div class="carousel-content">
-            <h1>ShapeBootstrap.net</h1>
-            <p class="lead">Download free but 100% premium quaility twitter Bootstrap based WordPress and HTML themes <br>from shapebootstrap.net</p>
-          </div>
-        </div>
-      </div><!--/.item-->
     </div><!--/.carousel-inner-->
-    <a class="prev" href="#main-slider" data-slide="prev"><i class="icon-angle-left"></i></a>
-    <a class="next" href="#main-slider" data-slide="next"><i class="icon-angle-right"></i></a>
   </section><!--/#main-slider-->
 
   <section id="services">
@@ -126,108 +116,53 @@
     <div class="container">
       <div class="box">
         <div class="center gap">
-          <h2>Portfolio</h2>
-          <p class="lead">Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac<br>turpis egestas. Vestibulum tortor quam, feugiat vitae.</p>
+          <h2>When was the Last Time You Read a<br> 5 Star Book?</h2>
+          <p class="lead">We're betting its been a hot minute and you are beginning to miss it.</p>
         </div><!--/.center-->
-        <ul class="portfolio-filter">
-          <li><a class="btn btn-primary active" href="#" data-filter="*">All</a></li>
-          <li><a class="btn btn-primary" href="#" data-filter=".bootstrap">Bootstrap</a></li>
-          <li><a class="btn btn-primary" href="#" data-filter=".html">HTML</a></li>
-          <li><a class="btn btn-primary" href="#" data-filter=".wordpress">Wordpress</a></li>
-        </ul><!--/#portfolio-filter-->
-        <ul class="portfolio-items col-4">
-          <li class="portfolio-item apps">
-            <div class="item-inner">
-              <div class="portfolio-image">
-                <img src="images/portfolio/thumb/item1.jpg" alt="">
-                <div class="overlay">
-                  <a class="preview btn btn-danger" title="Lorem ipsum dolor sit amet" href="images/portfolio/full/item1.jpg"><i class="icon-eye-open"></i></a>
-                </div>
+
+
+        <!-- Inserted from skilltra.de -->
+        <div class="content-section-a">
+          <div class="container">
+
+            <div class="row">
+              <div class="col-lg-6 col-sm-6">
+                <hr class="section-heading-spacer">
+                <div class="clearfix"></div>
+                <h2 class="section-heading">67% of Young Adults Read Less than 2 Books a Year</h2>
+                <p class="lead">It turns out us humans aren't great when we have too many options. . . so when we get out of school a lot of us just stop reading all together.</p>
               </div>
-              <h5>Lorem ipsum dolor sit amet</h5>
-            </div>
-          </li><!--/.portfolio-item-->
-          <li class="portfolio-item joomla bootstrap">
-            <div class="item-inner">
-              <div class="portfolio-image">
-                <img src="images/portfolio/thumb/item2.jpg" alt="">
-                <div class="overlay">
-                  <a class="preview btn btn-danger" title="Lorem ipsum dolor sit amet" href="images/portfolio/full/item2.jpg"><i class="icon-eye-open"></i></a>
-                </div>
+              <div class="col-lg-5 col-sm-6">
+                <%= image_tag('photocircle.png', :class => "img-responsive") %>
               </div>
-              <h5>Lorem ipsum dolor sit amet</h5>
             </div>
-          </li><!--/.portfolio-item-->
-          <li class="portfolio-item bootstrap wordpress">
-            <div class="item-inner">
-              <div class="portfolio-image">
-                <img src="images/portfolio/thumb/item3.jpg" alt="">
-                <div class="overlay">
-                  <a class="preview btn btn-danger" title="Lorem ipsum dolor sit amet" href="images/portfolio/full/item3.jpg"><i class="icon-eye-open"></i></a>
-                </div>
-              </div>
-              <h5>Lorem ipsum dolor sit amet</h5>
-            </div>
-          </li><!--/.portfolio-item-->
-          <li class="portfolio-item joomla wordpress apps">
-            <div class="item-inner">
-              <div class="portfolio-image">
-                <img src="images/portfolio/thumb/item4.jpg" alt="">
-                <div class="overlay">
-                  <a class="preview btn btn-danger" title="Lorem ipsum dolor sit amet" href="images/portfolio/full/item4.jpg"><i class="icon-eye-open"></i></a>
-                </div>
-              </div>
-              <h5>Lorem ipsum dolor sit amet</h5>
-            </div>
-          </li><!--/.portfolio-item-->
-          <li class="portfolio-item joomla html">
-            <div class="item-inner">
-              <div class="portfolio-image">
-                <img src="images/portfolio/thumb/item5.jpg" alt="">
-                <div class="overlay">
-                  <a class="preview btn btn-danger" title="Lorem ipsum dolor sit amet" href="images/portfolio/full/item5.jpg"><i class="icon-eye-open"></i></a>
-                </div>
-              </div>
-              <h5>Lorem ipsum dolor sit amet</h5>
-            </div>
-          </li><!--/.portfolio-item-->
-          <li class="portfolio-item wordpress html">
-            <div class="item-inner">
-              <div class="portfolio-image">
-                <img src="images/portfolio/thumb/item6.jpg" alt="">
-                <div class="overlay">
-                  <a class="preview btn btn-danger" title="Lorem ipsum dolor sit amet" href="images/portfolio/full/item6.jpg"><i class="icon-eye-open"></i></a>
-                </div>
-              </div>
-              <h5>Lorem ipsum dolor sit amet</h5>
-            </div>
-          </li><!--/.portfolio-item-->
-          <li class="portfolio-item joomla html">
-            <div class="item-inner">
-              <div class="portfolio-image">
-                <img src="images/portfolio/thumb/item5.jpg" alt="">
-                <div class="overlay">
-                  <a class="preview btn btn-danger" title="Lorem ipsum dolor sit amet" href="images/portfolio/full/item5.jpg"><i class="icon-eye-open"></i></a>
-                </div>
-              </div>
-              <h5>Lorem ipsum dolor sit amet</h5>
-            </div>
-          </li><!--/.portfolio-item-->
-          <li class="portfolio-item wordpress html">
-            <div class="item-inner">
-              <div class="portfolio-image">
-                <img src="images/portfolio/thumb/item6.jpg" alt="">
-                <div class="overlay">
-                  <a class="preview btn btn-danger" title="Lorem ipsum dolor sit amet" href="images/portfolio/full/item6.jpg"><i class="icon-eye-open"></i></a>
-                </div>
-              </div>
-              <h5>Lorem ipsum dolor sit amet</h5>
-            </div>
-          </li><!--/.portfolio-item-->
-        </ul>
+          </div>
+          <!-- /.container -->
+        </div>
+        <!-- End Inserted from skilltra.de -->
+
       </div><!--/.box-->
     </div><!--/.container-->
   </section><!--/#portfolio-->
+
+
+  <div class="content-section-b">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-5 col-lg-offset-1 col-sm-push-6 col-sm-6">
+          <hr class="section-heading-spacer">
+          <div class="clearfix"></div>
+          <h2 class="section-heading">Get Your Learning Mojo Back</h2>
+          <p class="lead">With Book Club you don’t have to worry. You will get an all star book every single month and more importantly you will have an entire army of fellow Book Clubbers to keep you accountable and make sure that you finish.</p>
+        </div>
+        <div class="col-lg-5 col-sm-pull-6  col-sm-6">
+          <%= image_tag('photocircle.png', :class => "img-responsive") %>
+        </div>
+      </div>
+    </div>
+    <!-- /.container -->
+  </div>
+
 
   <section id="pricing">
     <div class="container">
@@ -278,72 +213,6 @@
       </div>
     </div>
   </section><!--/#pricing-->
-
-  <section id="about-us">
-    <div class="container">
-      <div class="box">
-        <div class="center">
-          <h2>Meet the Team</h2>
-          <p class="lead">Pellentesque habitant morbi tristique senectus et netus et<br>malesuada fames ac turpis egestas.</p>
-        </div>
-        <div class="gap"></div>
-        <div id="team-scroller" class="carousel scale">
-          <div class="carousel-inner">
-            <div class="item active">
-              <div class="row">
-                <div class="col-sm-4">
-                  <div class="member">
-                    <p><img class="img-responsive img-thumbnail img-circle" src="images/team1.jpg" alt="" ></p>
-                    <h3>Agnes Smith<small class="designation">CEO &amp; Founder</small></h3>
-                  </div>
-                </div>
-                <div class="col-sm-4">
-                  <div class="member">
-                    <p><img class="img-responsive img-thumbnail img-circle" src="images/team2.jpg" alt="" ></p>
-                    <h3>Donald Ford<small class="designation">Senior Vice President</small></h3>
-                  </div>
-                </div>
-                <div class="col-sm-4">
-                  <div class="member">
-                    <p><img class="img-responsive img-thumbnail img-circle" src="images/team3.jpg" alt="" ></p>
-                    <h3>Karen Richardson<small class="designation">Assitant Vice President</small></h3>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="item">
-              <div class="row">
-                <div class="col-sm-4">
-                  <div class="member">
-                    <p><img class="img-responsive img-thumbnail img-circle" src="images/team3.jpg" alt="" ></p>
-                    <h3>David Robbins<small class="designation">Co-Founder</small></h3>
-                  </div>
-                </div>
-                <div class="col-sm-4">
-                  <div class="member">
-                    <p><img class="img-responsive img-thumbnail img-circle" src="images/team1.jpg" alt="" ></p>
-                    <h3>Philip Mejia<small class="designation">Marketing Manager</small></h3>
-                  </div>
-                </div>
-                <div class="col-sm-4">
-                  <div class="member">
-                    <p><img class="img-responsive img-thumbnail img-circle" src="images/team2.jpg" alt="" ></p>
-                    <h3>Charles Erickson<small class="designation">Support Manager</small></h3>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <a class="left-arrow" href="#team-scroller" data-slide="prev">
-            <i class="icon-angle-left icon-4x"></i>
-          </a>
-          <a class="right-arrow" href="#team-scroller" data-slide="next">
-            <i class="icon-angle-right icon-4x"></i>
-          </a>
-        </div><!--/.carousel-->
-      </div><!--/.box-->
-    </div><!--/.container-->
-  </section><!--/#about-us-->
 
   <section id="contact">
     <div class="container">
