--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -482,6 +482,7 @@ a:focus {
   width: 200px;
   height: 78px;
   background: url(../images/logo.png) no-repeat 0 50%;
+  font-size: 30px;
 }
 .navbar-default .navbar-nav > li {
   margin-left: 1px;
