--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -53,7 +53,7 @@ a:focus {
   z-index: 99999;
 }
 #main-slider {
-  background-image: url('main-image.jpg');
+  background-image: image-url('main-image.jpg');
   background-attachment: fixed;
   background-size: cover;
   background-position: 50% 50%;
