--- a/app/views/pages/main.html.erb
+++ b/app/views/pages/main.html.erb
@@ -32,13 +32,13 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Book<br>Club</a>
+          <a class="navbar-brand" href="#">Book<br>a Month</a>
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li class="active"><a href="#main-slider"><i class="glyphicon glyphicon-home"></i></a></li>
             <li><a href="#how_it_works">How it Works</a></li>
-            <li><a href="#goods">Goods</a></li>
+            <li><a href="#examples">Examples</a></li>
             <li><a href="#pricing">Pricing</a></li>
             <!-- <li><a href="#about-us">About Us</a></li> -->
             <li><a href="#contact">Contact</a></li>
@@ -53,8 +53,8 @@
       <div class="item active">
         <div class="container">
           <div class="carousel-content">
-            <h1>5 Star Books Delivered to Your Door</h1>
-            <p class="lead">Monthly club to help keep you reading and growing</p>
+            <h1>Learn Directly from the Author</h1>
+            <p class="lead">Monthly book club to help keep you reading and growing</p>
             <%= link_to "Get Started", new_user_registration_path, class: 'btn btn-success btn-lg' %>
             <a href="#how_it_works", class="btn btn-primary btn-lg">How it Works</a>
           </div>
@@ -67,8 +67,8 @@
     <div class="container">
       <div class="box">
         <div class="center gap">
-          <h2>How it Works</h2>
-          <p class="lead">Each month you get a box with the book of the month in it. <br>If you already own it or just don't want it. . . send it back on us.</p>
+          <h2>How it Works in Three Easy Steps</h2>
+          <p class="lead">Step 1: Book gets delivered to your door. <br>Step 2: You read book and write down questions.<br>Step 3: Login at end of the month and ask questions directly to the author.</p>
         </div><!--/.center-->
 
 
@@ -81,7 +81,7 @@
                 <hr class="section-heading-spacer">
                 <div class="clearfix"></div>
                 <h2 class="section-heading">Stay Ahead of the Curve</h2>
-                <p class="lead">The only way to maintain an edge is to keep growing.<br> Read the best books on business, success, and<br> topics of your choice.</p>
+                <p class="lead">23% of Americans didn't read a single book in 2014. . . <br> Don't be one of those people.</p>
               </div>
               <div class="col-lg-5 col-sm-6">
                 <%= image_tag('woman-holding-box.jpg', :class => "img-responsive") %>
@@ -97,11 +97,11 @@
   </section><!--/#how_it_works-->
 
 
-  <section id="goods">
+  <section id="examples">
     <div class="container">
       <div class="box first">
         <div class="center gap">
-          <h2>The Goods</h2>
+          <h2>Read a Book a Month</h2>
           <p class="lead"></p>
         </div><!--/.center-->
 
@@ -163,34 +163,35 @@
         <div id="pricing-table" class="row">
           <div class="col-sm-4">
             <ul class="plan">
-              <li class="plan-name">Starter</li>
-              <li class="plan-price">$20</li>
-              <li>Full Access to Online Community</li>
-              <li>Digital Notes</li>
-              <li></li>
-              <li></li>
+              <li class="plan-name">Library Edition</li>
+              <li class="plan-price">$15</li>
+              <li>Printable Notes</li>
+              <li>1 Pass to the Book Club Live event with the author</li>
+              <li>Video download of the interview</li>
+
               <li class="plan-action"><a href="#" class="btn btn-primary btn-lg">Signup</a></li>
             </ul>
           </div><!--/.col-sm-4-->
           <div class="col-sm-4">
             <ul class="plan featured">
-              <li class="plan-name">Standard</li>
-              <li class="plan-price">$50</li>
-              <li>Full Access to Online Community</li>
-              <li>Printed (and Digital) Notes</li>
-              <li>5 Start Book Every Month</li>
-              <li></li>
+              <li class="plan-name">Standard<br>(Most Popular)</li>
+              <li class="plan-price">$35</li>
+              <li>Book of the Month Delivered (don't worry we ask you before shipping anything)</li>
+              <li>Printed Notes</li>
+              <li>2 Passes to the Book Club Live Event with the author</li>
+              <li>Video downloads of the interview for you and guest</li>
               <li class="plan-action"><a href="#" class="btn btn-primary btn-lg">Signup</a></li>
             </ul>
           </div><!--/.col-sm-4-->
           <div class="col-sm-4">
             <ul class="plan">
               <li class="plan-name">Rock Star</li>
-              <li class="plan-price">$80</li>
-              <li>Full Access to Online Community</li>
-              <li>Printed (and Digital Notes)</li>
-              <li>5 Star Book with Hand Written Notes and Tabs</li>
-              <li>Extra Goodie</li>
+              <li class="plan-price">$55</li>
+              <li>Book of the Month Delivered (don't worry we ask you before shipping anything)</li>
+              <li>Printed Notes</li>
+              <li>4 Passes to the Book Club Live Event with the author</li>
+              <li>Video downloads of the interview for you and guests</li>
+              <li>Extra Goodies</li>
               <li class="plan-action"><a href="#" class="btn btn-primary btn-lg">Signup</a></li>
             </ul>
           </div><!--/.col-sm-4-->
@@ -279,7 +280,7 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-6">
-          &copy; 2015 <a target="_blank" href="http://shapebootstrap.net/" title="Free Twitter Bootstrap WordPress Themes and HTML templates">BookaMonthClub.com</a>. All Rights Reserved.
+          &copy; 2015 <a target="_blank" href="http://shapebootstrap.net/" title="Free Twitter Bootstrap WordPress Themes and HTML templates">BookaMonth.com</a>. All Rights Reserved.
         </div>
         <div class="col-sm-6">
           <!-- <img class="pull-right" src="images/shapebootstrap.png" alt="ShapeBootstrap" title="ShapeBootstrap"> -->
