--- a/app/views/pages/main.html.erb
+++ b/app/views/pages/main.html.erb
@@ -32,7 +32,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Book<br>a Month</a>
+          <a class="navbar-brand" href="#">Editionly</a>
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
@@ -53,7 +53,7 @@
       <div class="item active">
         <div class="container">
           <div class="carousel-content">
-            <h1>Learn Directly from the Author</h1>
+            <h1>Learn Directly with the Author</h1>
             <p class="lead">Monthly book club to help keep you reading and growing</p>
             <%= link_to "Get Started", new_user_registration_path, class: 'btn btn-success btn-lg' %>
             <a href="#how_it_works", class="btn btn-primary btn-lg">How it Works</a>
@@ -200,7 +200,7 @@
     </div>
   </section><!--/#pricing-->
 
-  <section id="contact">
+  <!-- <section id="contact">
     <div class="container">
       <div class="box last">
         <div class="row">
@@ -233,7 +233,7 @@
               </div>
             </form>
           </div><!--/.col-sm-6-->
-          <div class="col-sm-6">
+          <!-- <div class="col-sm-6">
             <h1>Our Address</h1>
             <div class="row">
               <div class="col-md-6">
@@ -271,16 +271,16 @@
               </div>
             </div>
           </div><!--/.col-sm-6-->
-        </div><!--/.row-->
-      </div><!--/.box-->
-    </div><!--/.container-->
-  </section><!--/#contact-->
+        <!-- </div><!--/.row-->
+      <!-- </div><!--/.box-->
+    <!-- </div><!--/.container-->
+  <!-- </section><!--/#contact-->
 
   <footer id="footer">
     <div class="container">
       <div class="row">
         <div class="col-sm-6">
-          &copy; 2015 <a target="_blank" href="http://shapebootstrap.net/" title="Free Twitter Bootstrap WordPress Themes and HTML templates">BookaMonth.com</a>. All Rights Reserved.
+          &copy; 2015 <a target="_blank" href="http://shapebootstrap.net/" title="Free Twitter Bootstrap WordPress Themes and HTML templates">Editionly</a>. All Rights Reserved.
         </div>
         <div class="col-sm-6">
           <!-- <img class="pull-right" src="images/shapebootstrap.png" alt="ShapeBootstrap" title="ShapeBootstrap"> -->
