--- a/app/views/pages/main.html.erb
+++ b/app/views/pages/main.html.erb
@@ -41,7 +41,7 @@
             <li><a href="#examples">Examples</a></li>
             <li><a href="#pricing">Pricing</a></li>
             <!-- <li><a href="#about-us">About Us</a></li> -->
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="#contact">Are you an author?</a></li>
           </ul>
         </div>
       </div>
@@ -53,7 +53,7 @@
       <div class="item active">
         <div class="container">
           <div class="carousel-content">
-            <h1>Learn Directly with the Author</h1>
+            <h1>Connect with Your Favorite Author</h1>
             <p class="lead">Monthly book club to help keep you reading and growing</p>
             <%= link_to "Get Started", new_user_registration_path, class: 'btn btn-success btn-lg' %>
             <a href="#how_it_works", class="btn btn-primary btn-lg">How it Works</a>
@@ -68,7 +68,7 @@
       <div class="box">
         <div class="center gap">
           <h2>How it Works in Three Easy Steps</h2>
-          <p class="lead">Step 1: Book gets delivered to your door. <br>Step 2: You read book and write down questions.<br>Step 3: Login at end of the month and ask questions directly to the author.</p>
+          <p class="lead">Step 1: Book gets delivered to your door. <br>Step 2: You read book and write down questions.<br>Step 3: Submit questions and vote on questions to ask the author.</p>
         </div><!--/.center-->
 
 
@@ -164,10 +164,9 @@
           <div class="col-sm-4">
             <ul class="plan">
               <li class="plan-name">Library Edition</li>
-              <li class="plan-price">$15</li>
+              <li class="plan-price">Free</li>
               <li>Printable Notes</li>
-              <li>1 Pass to the Book Club Live event with the author</li>
-              <li>Video download of the interview</li>
+              <li>Lurker priviledges (watch everything) at the Book Club Live events</li>
 
               <li class="plan-action"><a href="#" class="btn btn-primary btn-lg">Signup</a></li>
             </ul>
@@ -175,22 +174,22 @@
           <div class="col-sm-4">
             <ul class="plan featured">
               <li class="plan-name">Standard<br>(Most Popular)</li>
-              <li class="plan-price">$35</li>
-              <li>Book of the Month Delivered (don't worry we ask you before shipping anything)</li>
+              <li class="plan-price">$25</li>
+              <li>Book of the Month Delivered (don't worry we ask you each month before shipping anything)</li>
               <li>Printed Notes</li>
-              <li>2 Passes to the Book Club Live Event with the author</li>
-              <li>Video downloads of the interview for you and guest</li>
+              <li>Voting and chat priviledges for Book Club Live Events</li>
+              <li>Video downloads of the interview</li>
               <li class="plan-action"><a href="#" class="btn btn-primary btn-lg">Signup</a></li>
             </ul>
           </div><!--/.col-sm-4-->
           <div class="col-sm-4">
             <ul class="plan">
               <li class="plan-name">Rock Star</li>
-              <li class="plan-price">$55</li>
-              <li>Book of the Month Delivered (don't worry we ask you before shipping anything)</li>
+              <li class="plan-price">$45</li>
+              <li>Signed Book of the Month Delivered (don't worry we ask you each month before shipping anything)</li>
               <li>Printed Notes</li>
-              <li>4 Passes to the Book Club Live Event with the author</li>
-              <li>Video downloads of the interview for you and guests</li>
+              <li>Executive features for Book Club Live Events</li>
+              <li>Video downloads of the interview</li>
               <li>Extra Goodies</li>
               <li class="plan-action"><a href="#" class="btn btn-primary btn-lg">Signup</a></li>
             </ul>
@@ -200,13 +199,13 @@
     </div>
   </section><!--/#pricing-->
 
-  <!-- <section id="contact">
+  <section id="contact">
     <div class="container">
       <div class="box last">
         <div class="row">
           <div class="col-sm-6">
-            <h1>Contact Form</h1>
-            <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
+            <h1>Author Interested in Being Featured?</h1>
+            <p>We are always on the lookout for great books. If you are interested in being featured please submit your contact information below.</p>
             <div class="status alert alert-success" style="display: none"></div>
             <form id="main-contact-form" class="contact-form" name="contact-form" method="post" action="sendemail.php" role="form">
               <div class="row">
@@ -233,23 +232,20 @@
               </div>
             </form>
           </div><!--/.col-sm-6-->
-          <!-- <div class="col-sm-6">
+          <div class="col-sm-6">
             <h1>Our Address</h1>
             <div class="row">
               <div class="col-md-6">
                 <address>
-                  <strong>Twitter, Inc.</strong><br>
-                  795 Folsom Ave, Suite 600<br>
-                  San Francisco, CA 94107<br>
-                  <abbr title="Phone">P:</abbr> (123) 456-7890
+                  <strong>Editionly, Inc.</strong><br>
+                  8042 South Grant Way<br>
+                  Littleton, CO 80122<br>
+                  <abbr title="Phone">P:</abbr> (862) 202-9173
                 </address>
               </div>
               <div class="col-md-6">
                 <address>
-                  <strong>Twitter, Inc.</strong><br>
-                  795 Folsom Ave, Suite 600<br>
-                  San Francisco, CA 94107<br>
-                  <abbr title="Phone">P:</abbr> (123) 456-7890
+
                 </address>
               </div>
             </div>
@@ -271,10 +267,10 @@
               </div>
             </div>
           </div><!--/.col-sm-6-->
-        <!-- </div><!--/.row-->
-      <!-- </div><!--/.box-->
-    <!-- </div><!--/.container-->
-  <!-- </section><!--/#contact-->
+        </div><!--/.row-->
+      </div><!--/.box-->
+    </div><!--/.container-->
+  </section><!--/#contact
 
   <footer id="footer">
     <div class="container">
